--- a/index.html
+++ b/index.html
@@ -1,7 +1,73 @@
-<!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta name="description" content="Moira Weigel: writer, academic, author of Labors of Love.">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Moira Weigel</title>
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
+	<link rel="stylesheet" type="text/css" href="css/main.css" />
+	<link href='https://fonts.googleapis.com/css?family=Alegreya' rel='stylesheet' type='text/css'>
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+<div class="container">
+	<div class="jumbo">
+	<div class="row">
+		<div class="col-md-4">
+		<h1>moira weigel</h1>
+			<div class="nav">
+			<h2><a href="articles.html">articles</a></h2>
+		</div>
+		<div class="nav">
+			<h2><a href="press.html">press</a></h2>
+		</div>
+		<div class="nav">
+			<h2><a href="http://yale.academia.edu/MoiraWeigel" target="_blank">academic</a></h2>
+		</div>
+		<br/><br/><br/>
+
+			&#8594; I'm a writer and a junior fellow at Harvard.<br> 
+			&#8594; I got my PhD from Yale in 2017.<br> 
+			&#8594; You can reach me at moira.g.weigel at gmail dot com.<br> 
+			&#8594; I wrote a book called <i>Labor of Love: The Invention of Dating</i>.<br>
+			&#8594; You can buy it at your local bookstore or from <a href="http://www.amazon.com/Labor-Love-Invention-Moira-Weigel/dp/0374182531/ref=sr_1_1?ie=UTF8&qid=1444100569&sr=8-1&keywords=labor+of+love+the+invention+of+dating" target="_blank">Amazon</a>. If you're outside the US, purchase it <a href="https://www.bookdepository.com/Labor-of-Love/9780374182533">here</a>.<br>
+			&#8594; You can read reviews, excerpts, and interviews on my <a href="press.html">press page</a>.<br>
+			
+
+
+
+		</div>
+
+
+
+		<div class="col-md-4">
+
+		<img src="small.jpg" width="300">
+		</div>
+		
+<!-- 		<div class="col-md-4">
+		<a href="http://www.amazon.com/Labor-Love-Invention-Moira-Weigel/dp/0374182531/ref=sr_1_1?ie=UTF8&qid=1444100569&sr=8-1&keywords=labor+of+love+the+invention+of+dating" target="_blank"><img src="lol.png" width="150" align="left"><div class="book-sidebar"><strong>Buy the book</a>.</strong><br/><br/> <strong><a href="press.html">Read the press</a></strong>.</div>
+		<ul>
+			<li><strong>"addictive and accessible"</strong><br/>(<i>The New York Times</i>)</li>
+			<li><strong>"perceptive and wide-ranging"</strong><br/>(<i>The New Yorker</i>)</li>
+			<li><strong>"deliciously incisive"</strong><br/>(<i>The Washington Post</i>)</li>
+			<li><strong>"riveting"</strong><br/>(<i>Entertainment Weekly</i>)</li>
+			<li><strong>"remarkable at many levels"</strong></br/>(Alain de Botton)</li>
+			<li><strong>"dazzling"</strong><br/>(Leslie Jamison)</li>
+			<li><strong>"essential"</strong><br/>(Christian Rudder)</li>
+			<li><strong>"compulsively readable"</strong><br/>(Chris Kraus)</li>
+			<li><strong>"elegantly written, gratifyingly clear-eyed, and sharply funny"</strong><br/>(Nikil Saval)</li>
+		</ul>
+
+		</div> -->
+	</div>
+
+
+
+	</div>
+	</div>
+</div>
+
 </body>
 </html>
