--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="description" content="Moira Weigel: writer, academic, author of Labors of Love.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Moira Weigel</title>
+	<title>Bastián Castro</title>
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 	<link href='https://fonts.googleapis.com/css?family=Alegreya' rel='stylesheet' type='text/css'>
