--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div class="jumbo">
 	<div class="row">
 		<div class="col-md-4">
-		<h1>moira weigel</h1>
+		<h1>bastián castro</h1>
 			<div class="nav">
 			<h2><a href="articles.html">articles</a></h2>
 		</div>
