--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<meta name="description" content="Moira Weigel: writer, academic, author of Labors of Love.">
+	<meta name="description" content="Bastián Castro: nadie muy importante.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Bastián Castro</title>
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
@@ -17,22 +17,20 @@
 		<div class="col-md-4">
 		<h1>bastián castro</h1>
 			<div class="nav">
-			<h2><a href="articles.html">articles</a></h2>
+			<h2><a href="articulos.html">artículos</a></h2>
 		</div>
 		<div class="nav">
-			<h2><a href="press.html">press</a></h2>
+			<h2><a href="prensa.html">prensa</a></h2>
 		</div>
 		<div class="nav">
-			<h2><a href="http://yale.academia.edu/MoiraWeigel" target="_blank">academic</a></h2>
+			<h2><a href="academico.html" target="_blank">académico</a></h2>
 		</div>
 		<br/><br/><br/>
 
-			&#8594; I'm a writer and a junior fellow at Harvard.<br> 
-			&#8594; I got my PhD from Yale in 2017.<br> 
-			&#8594; You can reach me at moira.g.weigel at gmail dot com.<br> 
-			&#8594; I wrote a book called <i>Labor of Love: The Invention of Dating</i>.<br>
-			&#8594; You can buy it at your local bookstore or from <a href="http://www.amazon.com/Labor-Love-Invention-Moira-Weigel/dp/0374182531/ref=sr_1_1?ie=UTF8&qid=1444100569&sr=8-1&keywords=labor+of+love+the+invention+of+dating" target="_blank">Amazon</a>. If you're outside the US, purchase it <a href="https://www.bookdepository.com/Labor-of-Love/9780374182533">here</a>.<br>
-			&#8594; You can read reviews, excerpts, and interviews on my <a href="press.html">press page</a>.<br>
+			&#8594; Soy estudiante de Economía.<br> 
+			&#8594; Tengo algunos intereses sobre los que escribo: <i>Estadística, Ciencia de Datos, Ciencias Sociales, Política</i>.<br>
+			&#8594; Tengo un blog personal que utilizo para escribir sobre mis intereses, el cual puedes leer <a href="blog">aquí</a>.<br>
+			&#8594; Y también otro sobre ciencia, el cual puedes leer <a href="ciencia">aquí</a>.<br> Este último surge como una forma de repositorio para ir aprendiendo sobre lo que me interesa pero no sé mucho.<br>
 			
 
 
