--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			&#8594; Soy estudiante de Economía.<br> 
 			&#8594; Tengo algunos intereses sobre los que escribo: <i>Estadística, Ciencia de Datos, Ciencias Sociales, Política</i>.<br>
 			&#8594; Tengo un blog personal que utilizo para escribir sobre mis intereses, el cual puedes leer <a href="blog">aquí</a>.<br>
-			&#8594; Y también otro sobre ciencia, el cual puedes leer <a href="ciencia">aquí</a>.<br> Este último surge como una forma de repositorio para ir aprendiendo sobre lo que me interesa pero no sé mucho.<br>
+			&#8594; Y también otro sobre ciencia, el cual puedes leer <a href="ciencia">aquí</a>. Este último surge como una forma de repositorio para ir aprendiendo sobre lo que me interesa pero no sé mucho.<br>
 			
 
 
