--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 		<div class="col-md-4">
 		<h1>bastián castro</h1>
 			<div class="nav">
-			<h2><a href="articulos.html">artículos</a></h2>
+			<h2><a href="index.html">nada</a></h2>
 		</div>
 		<div class="nav">
-			<h2><a href="prensa.html">prensa</a></h2>
+			<h2><a href="index.html">nada</a></h2>
 		</div>
 		<div class="nav">
-			<h2><a href="academico.html" target="_blank">académico</a></h2>
+			<h2><a href="index.html" target="_blank">nada</a></h2>
 		</div>
 		<br/><br/><br/>
 
