--- a/index.html
+++ b/index.html
@@ -17,20 +17,18 @@
 		<div class="col-md-4">
 		<h1>bastián castro</h1>
 			<div class="nav">
-			<h2><a href="index.html">nada</a></h2>
+			<h2><a href="blog">blog personal</a></h2>
 		</div>
 		<div class="nav">
-			<h2><a href="index.html">nada</a></h2>
+			<h2><a href="ciencia">blog de ciencia</a></h2>
 		</div>
-		<div class="nav">
-			<h2><a href="index.html" target="_blank">nada</a></h2>
-		</div>
+
 		<br/><br/><br/>
 
-			&#8594; Soy estudiante de Economía.<br> 
-			&#8594; Tengo algunos intereses sobre los que escribo: <i>Estadística, Ciencia de Datos, Ciencias Sociales, Política</i>.<br>
-			&#8594; Tengo un blog personal que utilizo para escribir sobre mis intereses, el cual puedes leer <a href="blog">aquí</a>.<br>
-			&#8594; Y también otro sobre ciencia, el cual puedes leer <a href="ciencia">aquí</a>. Este último surge como una forma de repositorio para ir aprendiendo sobre lo que me interesa pero no sé mucho.<br>
+			&#8594; Soy estudiante de Economía en una universidad chilena.<br> 
+			&#8594; Tengo otros intereses que últimamente me han determinado para dar un giro académico: <i>Estadística, Ciencia de Datos, Ciencias Sociales, Filosofía Política y Filosofía de la Ciencia</i>.<br>
+			&#8594; Tengo un blog personal que utilizo para escribir sobre cosas que me pasan y sobre mis opiniones políticas/culturales, el cual puedes leer <a href="blog">aquí</a>.<br>
+			&#8594; Y también otro sobre ciencia, el cual puedes leer <a href="ciencia">aquí</a>. Este último surge como una forma de repositorio para ir aprendiendo sobre los intereses que mencioné más arriba.<br>
 			
 
 
