--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 		<div class="nav">
 			<h2><a href="ciencia">blog de ciencia</a></h2>
 		</div>
-
+		<div class="nav">
+			<h2><a href="blog/about">sobre mí</a></h2>
+		</div>
+			
 		<br/><br/><br/>
 
 			&#8594; Soy estudiante de Economía en una universidad chilena.<br> 
