--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 			<div class="nav">
 			<h2><a href="blog">blog personal</a></h2>
 		</div>
-		<div class="nav">
+
+<!-- 		<div class="nav">
 			<h2><a href="ciencia">blog de ciencia</a></h2>
-		</div>
+		</div> -->
 		<div class="nav">
 			<h2><a href="blog/about">sobre mí</a></h2>
 		</div>
@@ -61,7 +62,6 @@
 
 		</div> -->
 	</div>
-
 
 
 	</div>
