--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<br/><br/><br/>
 
 			&#8594; Soy estudiante de Economía en una universidad chilena.<br> 
-			&#8594; Tengo otros intereses que últimamente me han determinado para dar un giro académico: <i>Estadística, Ciencia de Datos, Ciencias Sociales, Filosofía Política y Filosofía de la Ciencia</i>.<br>
+			&#8594; Mis intereses académicos son: <i>Estadística, Ciencia de Datos, Ciencias Sociales, Filosofía Política y Filosofía de la Ciencia</i>.<br>
 			&#8594; Tengo un blog personal que utilizo para escribir sobre cosas que me pasan y sobre mis opiniones políticas/culturales, el cual puedes leer <a href="blog">aquí</a>.<br>
 <!--			&#8594; Y también otro sobre ciencia, el cual puedes leer <a href="ciencia">aquí</a>. Este último surge como una forma de repositorio para ir aprendiendo sobre los intereses que mencioné más arriba.<br>
 			
