--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<meta name="description" content="Bastián Castro: nadie muy importante.">
+	<meta name="description" content="Bastián Castro Nofal">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Bastián Castro</title>
+	<title>Bastián Castro Nofal</title>
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 	<link href='https://fonts.googleapis.com/css?family=Alegreya' rel='stylesheet' type='text/css'>
@@ -17,24 +17,26 @@
 		<div class="col-md-4">
 		<h1>bastián castro</h1>
 			<div class="nav">
-			<h2><a href="blog">blog personal</a></h2>
+			<h2><a href="blog">personal blog [ESP]</a></h2>
 		</div>
-
-<!-- 		<div class="nav">
-			<h2><a href="ciencia">blog de ciencia</a></h2>
-		</div> -->
+			<div class="nav">
+			<h2><a href="cv">cv</a></h2>
+		</div>
+ 		<div class="nav">
+			<h2><a href="ciencia">science blog [ESP]</a></h2>
+		</div>
 		<div class="nav">
-			<h2><a href="blog/about">sobre mí</a></h2>
+			<h2><a href="blog/about">about me [ESP]</a></h2>
 		</div>
 			
 		<br/><br/><br/>
 
-			&#8594; Soy estudiante de Economía en una universidad chilena.<br> 
-			&#8594; Mis intereses académicos son: <i>Estadística, Ciencia de Datos, Ciencias Sociales, Filosofía Política y Filosofía de la Ciencia</i>.<br>
-			&#8594; Tengo un blog personal que utilizo para escribir sobre cosas que me pasan y sobre mis opiniones políticas/culturales, el cual puedes leer <a href="blog">aquí</a>.<br>
-<!--			&#8594; Y también otro sobre ciencia, el cual puedes leer <a href="ciencia">aquí</a>. Este último surge como una forma de repositorio para ir aprendiendo sobre los intereses que mencioné más arriba.<br>
+			&#8594; I'm an undergraduate economics student attending the University of Chile.<br> 
+			&#8594; My main interests are: <i>Stats, Data Science, Social Sciences and Philosophy of Science.</i>.<br>
+			&#8594; I have a blog where I talk about my life and politics [ESP]. You can see it <a href="blog">here</a>.<br>
+			&#8594; And other one about science [ESP]. You can read it <a href="ciencia">here</a>.<br>
 			
--->
+
 
 
 		</div>
