--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 			
 		<br/><br/><br/>
 
+			&nbsp;
 			&#8594; I'm an undergraduate economics student attending the University of Chile.<br> 
 			&#8594; My main interests are: <i>Stats, Data Science, Social Sciences and Philosophy of Science.</i>.<br>
 			&#8594; I have a blog where I talk about my life and politics [ESP]. You can see it <a href="blog">here</a>.<br>
