--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 								</section> --->
 							</article>
 
-						<!-- Contact -->
+						<!-- Contact 
 							<article id="contact" class="panel">
 								<header>
 									<h2>Contact Me</h2>
@@ -117,7 +117,7 @@
 										</div>
 									</div>
 								</form>
-							</article>
+							</article> -->
 
 					</div>
 
