--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#work" class="icon solid fa-folder"><span>About me</span></a>
 					<!--	<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a> -->
-						<a href="https://twitter.com/ajlkn" class="icon brands fa-twitter"><span>Twitter</span></a>
+						<a href="https://twitter.com/guccicomunismo" class="icon brands fa-twitter"><span>Twitter</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -46,8 +46,11 @@
 									<h2>Hi, i'm Bastián</h2>
 								</header>
 								<p>
-									I'm an undergraduate economics student attending the University of Chile. 
+									I'm an undergraduate economics student attending the University of Chile.
+									
 									My main interests are: Stats, Data Science, Social Sciences and Philosophy of Science.
+									
+									You can read my CV <a href="images/cv_eng.pdf">here</a>.
 								</p>
 							<!--	<section>
 									<div class="row">
