--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
 									I'm an undergraduate economics student attending the University of Chile.
 									
 									My main interests are: Stats, Data Science, Social Sciences and Philosophy of Science.
-									
+									<ul>
+  									<li>Coffee</li>
+  									<li>Tea</li>
+ 									<li>Milk</li>
+									</ul>
 									You can read my CV <a href="images/cv_eng.pdf">here</a>.
 								</p>
 							<!--	<section>
