--- a/index.html
+++ b/index.html
@@ -46,15 +46,13 @@
 									<h2>Hi, i'm Bastián</h2>
 								</header>
 								<p>
-									I'm an undergraduate economics student attending the University of Chile.
 									
-									My main interests are: Stats, Data Science, Social Sciences and Philosophy of Science.
 									<ul>
-  									<li>Coffee</li>
-  									<li>Tea</li>
- 									<li>Milk</li>
+  									<li>I'm an undergraduate economics student attending the University of Chile.</li>
+  									<li>My main interests are: Stats, Data Science, Social Sciences and Philosophy of Science.</li>
+ 									<li>You can read my CV <a href="images/cv_eng.pdf">here</a>.</li>
 									</ul>
-									You can read my CV <a href="images/cv_eng.pdf">here</a>.
+									
 								</p>
 							<!--	<section>
 									<div class="row">
