--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
 									<h2>Hi, i'm Bastián</h2>
 								</header>
 								<p>
-									
+									About me:
 									<ul>
   									<li>I'm an undergraduate economics student attending the University of Chile.</li>
   									<li>My main interests are: Stats, Data Science, Social Sciences and Philosophy of Science.</li>
  									<li>You can read my CV <a href="images/cv_eng.pdf">here</a>.</li>
 									</ul>
-									
+									I have a blog where I talk about my life and politics [ESP]. You can see it <a href="https://medium.com/@castronofal">here</a>.
 								</p>
 							<!--	<section>
 									<div class="row">
